--- a/app/assets/stylesheets/hera/modules/navigation/_navigation.scss
+++ b/app/assets/stylesheets/hera/modules/navigation/_navigation.scss
@@ -6,7 +6,7 @@ header {
     .container-fluid {
       .navbar-brand {
         img {
-          height: 2.2em;
+          height: 2.425rem;
           margin: 3px 0 -3px;
           padding: 0 15px;
         }
